# desktop-demo-samples

./: .gitignore  BundleInfo.plist.in  CMakeLists.txt  README.md  camera_access_authorization.h  camera_access_authorization.mm  consts.h  frame_view.cpp  frame_view.h  install_build_deps_astra.sh  main.cpp  media_utils.cpp  media_utils.h  metrics.cpp  metrics.h  metrics_view.cpp  metrics_view.h  pipeline.cpp  pipeline.h  sample.cpp  sample.desktop.in  sample.h  sample_ui.cpp  sample_ui.h  sdk_library_handler.h  sdk_library_handler_unix.cpp  sdk_library_handler_win.cpp  video_filter.cpp  video_filter.h
macOS/sdk/include/sdk/: frame.h  frame_factory.h  irelease.h  sdk_factory.h
resources/color_luts/: Filter 11.cube  Filter 20.cube
win_version/: CMakeLists.txt  VersionResource.rc.in  generate_version_info.cmake
windows/sdk/include/sdk/: pipeline.h  pipeline_config.h
